infra/kafka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: infra
spec:
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
  type: ClusterIP
